# medrag-multi-modal

./: .gitignore  404.html  README.md  app.py  index.html  install.sh  mkdocs.yml  objects.inv  pyproject.toml  run.sh  test.ipynb
.github/workflows/: tests.yml
app/: index.html
assistant/figure_annotation/: index.html
assistant/llm_client/: index.html
assistant/medqa_assistant/: index.html
chunking/: index.html
docs/: app.md  index.md
docs/assistant/: llm_client.md
docs/document_loader/: load_image.md  load_text.md  load_text_image.md
docs/document_loader/image_loader/: base_img_loader.md  fitzpil_img_loader.md  marker_img_loader.md  pdf2image_img_loader.md  pdfplumber_img_loader.md  pymupdf_img_loader.md
docs/document_loader/text_loader/: base_text_loader.md  marker_text_loader.md  pdfplumber_text_loader.md  pymupdf4llm_text_loader.md  pypdf2_text_loader.md
docs/installation/: development.md  install.md
docs/rag/: chunking.md
docs/rag/assistant/: figure_annotation.md  medqa_assistant.md
docs/rag/document_loader/text_loader/: docling_text_loader.md  pypdf2_text_loader.md
docs/rag/evals/: eval.md
docs/rag/evals/metrics/: base.md  mmlu.md
docs/rag/retrieval/text_retrieval/: contriever.md  nv_embed_2.md  sentence_transformer.md
docs/retreival/: bm25s.md  colpali.md  contriever.md  medcpt.md  multi_modal_retrieval.md  nv_embed_2.md
docs/retrieval/text_retrieval/: bm25s.md  medcpt.md
document_loader/image_loader/base_img_loader/: index.html
document_loader/image_loader/fitzpil_img_loader/: index.html
document_loader/image_loader/marker_img_loader/: index.html
document_loader/image_loader/pdf2image_img_loader/: index.html
document_loader/image_loader/pdfplumber_img_loader/: index.html
document_loader/image_loader/pymupdf_img_loader/: index.html
document_loader/text_loader/base_text_loader/: index.html
document_loader/text_loader/marker_text_loader/: index.html
document_loader/text_loader/pdfplumber_text_loader/: index.html
document_loader/text_loader/pymupdf4llm_text_loader/: index.html
document_loader/text_loader/pypdf2_text_loader/: index.html
installation/development/: index.html
installation/install/: index.html
medrag_app/: chunking.py  indexing.py  load_text.py  question_answer.py
medrag_multi_modal/: __init__.py  cli.py  semantic_chunker.py  semantic_chunking.py  utils.py
medrag_multi_modal/assistant/: __init__.py  figure_annotation.py  llm_client.py  medqa_assistant.py  schema.py
medrag_multi_modal/document_loader/: __init__.py  load_image.py  load_text.py  load_text_image.py
medrag_multi_modal/document_loader/image_loader/: __init__.py  base_img_loader.py  fitzpil_img_loader.py  marker_img_loader.py  pdf2image_img_loader.py  pdfplumber_img_loader.py  pymupdf_img_loader.py
medrag_multi_modal/document_loader/text_loader/: __init__.py  base_text_loader.py  docling_text_loader.py  marker_text_loader.py  pdfplumber_text_loader.py  pymupdf4llm_text_loader.py  pypdf2_text_loader.py
medrag_multi_modal/metrics/: __init__.py  base.py  mmlu.py
medrag_multi_modal/retrieval/: __init__.py  bm25s_retrieval.py  colpali_retrieval.py  common.py  contriever_retrieval.py  medcpt_retrieval.py  multi_modal_retrieval.py  nv_embed_2.py
medrag_multi_modal/retrieval/text_retrieval/: __init__.py  bm25s_retrieval.py  contriever_retrieval.py  medcpt_retrieval.py  nv_embed_2.py  sentence_transformer_retrieval.py
rag/assistant/figure_annotation/: index.html
rag/assistant/llm_client/: index.html
rag/assistant/medqa_assistant/: index.html
rag/chunking/: index.html
rag/document_loader/image_loader/base_img_loader/: index.html
rag/document_loader/image_loader/fitzpil_img_loader/: index.html
rag/document_loader/image_loader/marker_img_loader/: index.html
rag/document_loader/image_loader/pdf2image_img_loader/: index.html
rag/document_loader/image_loader/pdfplumber_img_loader/: index.html
rag/document_loader/image_loader/pymupdf_img_loader/: index.html
rag/document_loader/text_loader/base_text_loader/: index.html
rag/document_loader/text_loader/marker_text_loader/: index.html
rag/document_loader/text_loader/pdfplumber_text_loader/: index.html
rag/document_loader/text_loader/pymupdf4llm_text_loader/: index.html
rag/document_loader/text_loader/pypdf2_text_loader/: index.html
rag/evals/eval/: index.html
rag/evals/metrics/base/: index.html
rag/evals/metrics/mmlu/: index.html
rag/retrieval/colpali/: index.html
rag/retrieval/text_retrieval/bm25s/: index.html
rag/retrieval/text_retrieval/contriever/: index.html
rag/retrieval/text_retrieval/medcpt/: index.html
rag/retrieval/text_retrieval/sentence_transformer/: index.html
retreival/bm25s/: index.html
retreival/colpali/: index.html
retreival/contriever/: index.html
retreival/medcpt/: index.html
retreival/nv_embed_2/: index.html
scripts/: load_text.py
search/: search_index.json
tests/: conftest.py  evals.py  semantic_chunking.py
tests/assistant/: llm_client.py  test_llm_client.py  test_medqa_assistant.py
tests/document_loader/: image_loader.py  text_loader.py
tests/evals/: test_assistant_mmlu_anatomy.py
tests/retrieval/: bm25s.py  test_bm25s.py  test_contriever.py  test_medcpt.py  test_nv_embed.py
