[project]
name = "medrag-multi-modal"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adapters>=1.0.0",
    "bm25s[full]>=0.2.2",
    "datasets>=3.0.1",
    "einops>=0.8.0",
    "firerequests>=0.0.7",
    "jax[cpu]>=0.4.34",
    "pdf2image>=1.17.0",
    "python-dotenv>=1.0.1",
    "pymupdf4llm>=0.0.17",
    "torch>=2.4.1",
    "weave>=0.51.14",
    "pip>=24.2",
    "uv>=0.4.20",
    "pytest>=8.3.3",
    "PyPDF2>=3.0.1",
    "PyStemmer>=2.2.0.3",
    "safetensors>=0.4.5",
    "isort>=5.13.2",
    "black>=24.10.0",
    "ruff>=0.6.9",
    "marker-pdf>=0.2.17",
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-material>=9.5.39",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.0",
    "jupyter>=1.1.1",
    "pdfplumber>=0.11.4",
    "semchunk>=2.2.0",
    "tiktoken>=0.8.0",
    "sentence-transformers>=3.2.0",
    "google-generativeai>=0.8.3",
    "mistralai>=1.1.0",
    "instructor>=1.6.3",
    "jsonlines>=4.0.0",
    "opencv-python>=4.10.0.84",
    "openai>=1.52.2",
    "streamlit>=1.39.0",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.39.0",
]
core = [
    "adapters>=1.0.0",
    "bm25s[full]>=0.2.2",
    "datasets>=3.0.1",
    "einops>=0.8.0",
    "firerequests>=0.0.7",
    "jax[cpu]>=0.4.34",
    "marker-pdf>=0.2.17",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.4",
    "PyPDF2>=3.0.1",
    "PyStemmer>=2.2.0.3",
    "python-dotenv>=1.0.1",
    "pymupdf4llm>=0.0.17",
    "safetensors>=0.4.5",
    "semchunk>=2.2.0",
    "tiktoken>=0.8.0",
    "torch>=2.4.1",
    "weave>=0.51.14",
    "sentence-transformers>=3.2.0",
    "google-generativeai>=0.8.3",
    "mistralai>=1.1.0",
    "instructor>=1.6.3",
    "jsonlines>=4.0.0",
    "opencv-python>=4.10.0.84",
    "openai>=1.52.2",
]
dev = [
    "pytest>=8.3.3",
    "isort>=5.13.2",
    "black>=24.10.0",
    "ruff>=0.6.9",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-material>=9.5.39",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.0",
    "jupyter>=1.1.1",
]

[project.scripts]
medrag = "medrag_multi_modal.cli:main"

[tool.pytest.ini_options]
pythonpath = "."

[tool.setuptools]
py-modules = ["medrag_multi_modal"]
